updating environment configurations, documentation. Enhanced README and notebooks to reflect new branding and structure for a production-ready RAG system.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# arXiv Paper Curator - Environment Configuration (EXAMPLE)
+# Falco - Environment Configuration (EXAMPLE)
 # Copy this file to .env and adjust values as needed
 
 # Application Settings
@@ -82,7 +82,7 @@ REDIS__PASSWORD=X74g/aCN5aAyMPA4PKNwww==
 REDIS__DB=0
 REDIS__TTL_HOURS=6
 
-# Telegram Bot Configuration (Week 7)
+# Telegram Bot Configuration
 # Get your bot token from @BotFather on Telegram
 TELEGRAM__ENABLED=true
 TELEGRAM__BOT_TOKEN=your_telegram_bot_token_here
